dfir_rs/tests/compile-fail/surface_syntax_paren_arrow.stderr
error: unexpected end of input, expected one of: square brackets, `mod`, identifier, parentheses
 --> tests/compile-fail/surface_syntax_paren_arrow.rs:5:31
  |
5 |         (source_iter(0..10) ->);
  |                               ^
